@@ -534,7 +534,7 @@ sub run {
                         unless (
                                $fname =~ m,^usr/share/doc/(?:[^/]+/)?examples/,
                             or $fname
-                            =~ m,^usr/share/doc/(?:.+/)?html/.*\.map$,
+                            =~ m,^usr/share/doc/(?:.+/)?(?:doxygen|html)/.*\.map$,
                             or $fname
                             =~ m,^usr/share/doc/(?:.+/)?__init__\.py$,){
                             tag 'zero-byte-file-in-doc-directory', $file;
@@ -582,7 +582,7 @@ sub run {
                     if ($fname
                         =~ m,^usr/share/doc/$ppkg/(?:[^/]+/)+objects\.inv\.gz$,
                         and $file->file_info =~ m/gzip compressed/) {
-                        tag 'compressed-objects.inv', $file;
+                        tag 'file-should-not-be-compressed', $file;
                     }
 
                 }
@@ -1148,12 +1148,19 @@ sub run {
             tag 'override-file-in-wrong-location', $file;
         }
 
-        # doxygen map + md5sum
+        # doxygen md5sum
         if ($fname =~ m,^usr/share/doc/$ppkg/[^/]+/.+\.md5$,) {
             if ($file->parent_dir->child('doxygen.png')) {
                 tag 'useless-autogenerated-doxygen-file', $file;
             }
         }
+
+        # doxygen compressed map
+        if ($fname =~ m,^usr/share/doc/(?:.+/)?(?:doxygen|html)/
+                         .*\.map\.$COMPRESS_FILE_EXTENSIONS_OR_ALL,x) {
+            tag 'file-should-not-be-compressed', $file;
+        }
+            
 
         # ---------------- pyshared-data
         if ($fname=~ m,^usr/share/python-support/$ppkg\.(?:public|private)$,){
