@@ -6,5 +6,6 @@ Skeleton: pedantic
 Options: --pedantic -I -E
 Architecture: any
 Test-For:
+ file-should-not-be-compressed
  source-contains-prebuilt-doxygen-documentation
  useless-autogenerated-doxygen-file
