@@ -1,3 +1,4 @@
 I: files-doxygen-documentation: possible-documentation-but-no-doc-base-registration
 I: files-doxygen-documentation: useless-autogenerated-doxygen-file usr/share/doc/files-doxygen-documentation/html/doc/html/graph_legend.md5
 P: files-doxygen-documentation source: source-contains-prebuilt-doxygen-documentation src/doc/html/
+W: files-doxygen-documentation: file-should-not-be-compressed usr/share/doc/files-doxygen-documentation/html/doc/html/graph_legend.map.gz
