@@ -4,7 +4,7 @@ Version: 1.0
 Description: Test general Python related tags
 References: Debian Bug#608810, Debian Bug#756005
 Test-For:
- compressed-objects.inv
+ file-should-not-be-compressed
  package-installs-python-bytecode
  package-installs-python-egg
  package-installs-python-pycache-dir
